# nix-cabal-transitive-debug

./: nix-git.json  nixpkgs-git.json  picus.nix
foo/: default.nix  foo.cabal  hs.nix
foo/bar/: bar.cabal  hs.nix
foo/bar/src/: Bar.hs
foo/src/: Foo.hs
