name:                foo
version:             4.3.0.0
synopsis:            Foo
description:         Foo arkadaş foo
license:             BSD3
license-file:        LICENSE
author:              Picus Security
maintainer:          tech@picussecurity.com
copyright:           Picus Security
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Library
  Default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -O2 -Wall
  exposed-modules:
    Foo
  build-depends:
    acid-state,
    base >=4.7 && < 5
