name:                bar
version:             4.3.0.0
synopsis:            Bar
description:         Bar arkadaş bar
license:             BSD3
license-file:        LICENSE
author:              Picus Security
maintainer:          tech@picussecurity.com
copyright:           Picus Security
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Library
  Default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -O2 -Wall
  exposed-modules:
    Bar
  build-depends:
    foo,
    base >=4.7 && < 5
